@@ -147,6 +147,7 @@ since 1999.  If I missed your name, let me know.
 * Ryoji Kobayashi
 * Uwe Knop
 * Daniel Koffler
+* Petya Kohts
 * Chris Kolquist
 * Jiri Kostern
 * Christoph Kron
